feat: Migrate AI financial data extraction to OpenRouter, enabling selection of multiple LLMs and updating the UI accordingly.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 # Get these values from your Supabase project settings
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+# OpenRouter API Configuration
+# Get your API key at https://openrouter.ai/keys
+VITE_OPENROUTER_API_KEY=sk-or-v1-your-key-here
